fixed text wrapping

--- a/src/header.css
+++ b/src/header.css
@@ -23,12 +23,14 @@
 	margin-top: 3px;
 	text-decoration: none;
 	color: #ffb56b;
+	white-space: nowrap;
 }
 
 
 .headerSections h2 {
 	margin: 15px;
 	font-size: 16px;
+	white-space: nowrap;
 }
 
 .headerSections a:hover, .headerSections h1:hover {
